Login and Register Page In Process

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <a href="Ashish/testimonial.html">Testimonial</a>
       </div>
 
-      <a href="#"><button id="register">Registration</button></a>
+      <a href="Jahir/login.html"><button id="register">Registration</button></a>
     </div>
 
     <!-- nav bar  -->
