--- a/Jahir/login.html
+++ b/Jahir/login.html
@@ -7,22 +7,40 @@
     <link rel="stylesheet" href="login.css">
 </head>
 <body>
-   <form action="">
+    <div id="cont1">
+        <div id="logo">
+            <h1>EDUKIN</h1>
+        </div>
+        <div id="nav1">
+            <ul>
+                <li><a href="/index.html">Home</a></li>
+                <li><a href="#">Programs</a></li>
+                <li><a href="#">Courses</a></li>
+                <li><a href="#">Admissions</a></li>
+                <li><a href="#">Testimonial</a></li>
+            </ul>
+        </div>
+        <div id="negivation">
+            <div id="menu" onclick="onClickMenu()">
+               <div id="bar1" class="bar"></div>
+               <div id="bar2" class="bar"></div>
+               <div id="bar3" class="bar"></div>
+            </div>
+        </div>
+   </div>
     <div class="login-form">
         <div id="circleDiv">
              <div id="circle"></div>
              <div>Loading....</div>
         </div>
-        <!-- <div id="circleDiv1"> <div id="circle1"></div></div> -->
-       <!-- <div action=""> -->
         <div class="form-title">Student Login</div>
         <div class="form-input">
-            <label for="username"> Username</label>
-            <input type="text" id="username" required>
+            <label for="username"> Email</label>
+            <input type="text" id="email" placeholder="Enter Email here" required>
         </div>
         <div class="form-input">
             <label for="password"> Password</label>
-            <input type="password" id="password" required >
+            <input type="password" id="password" placeholder="Enter Password here" required >
         </div>
 
         <div class="captcha">
@@ -38,9 +56,7 @@
             <button type="submit" id="login-btn">Login</button>
         </div>
         <p>Don't have an account? <a href="register.html" id="signupLink">Register</a></p>
-       <!-- </form> -->
     </div>
-   </form>
 </body>
 </html>
 <script src="login.js"></script>
