--- a/Ashish/testimonial.html
+++ b/Ashish/testimonial.html
@@ -2,34 +2,165 @@
 <html>
 <head>
   <title>Testimonial Page</title>
-  <link rel="stylesheet" type="text/css" href="styles.css">
+  <link rel="stylesheet" type="text/css" href="testimonial.css">
 </head>
 <body>
-  <header>
-    <!-- Your header content goes here -->
-  </header>
+<!-- nav bar  -->
+<div class="nav">
+  <div>
+    <a href="index.html"><h1>Edukin</h1></a>
+  </div>
 
-  <section class="hero">
-    <!-- Your hero section content goes here -->
-  </section>
+  <div>
+    <a href="index.html">Home</a>
+    <a href="#">Programs</a>
+    <a href="./Amol/courses.html" id="course">Courses</a>
+    <a href="#">Admissions</a>
+    <a href="Ashish/testimonial.html">Testimonial</a>
+  </div>
+
+  <a href="Jahir/login.html"><button id="register">Registration</button></a>
+</div>
+
+<!-- nav bar  -->
+
+<section>
+  <div id="slide-div">
+  </div>
+</section>
+
+<section>
+  <div class="head">
+    <h1>Our Students Parent's Testimonials</h1>
+    <p>the language learning program at our school has been nothing short of transformative. The engaging teaching methods, supportive instructors, and age-appropriate curriculum have made language learning a joyous and rewarding experience for your child</p>
+  </div>
+</section>
+
+
+<section class="video-testimonials">
+  <div>
+    <iframe src="https://www.youtube.com/embed/xv9G7v_zBf4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
+    <iframe src="https://www.youtube.com/embed/ZeglHDc3Cpk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
+    <iframe src="https://www.youtube.com/embed/-_W6EXTysaM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
+    <iframe src="https://www.youtube.com/embed/BpS1k8fWMWU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
+    <iframe src="https://www.youtube.com/embed/RiEGz7V7SKc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
+    <iframe src="https://www.youtube.com/embed/3xvQLx0Jke4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+  </div>
+</section>
 
   <section class="testimonial-grid">
-    <!-- Individual testimonial cards or grid goes here -->
+    <div class="cards">
+      <div class="card">
+        <div class="parent-details">
+          <div>
+            <img src="./Images/1.jpg" alt="Parent image">
+          </div>
+          <div>Dipti's Parent</div>
+        </div>
+        <p>❝ The school employed interactive and engaging teaching methods that were perfectly suited for both children and adults. The lessons were designed to be fun and enjoyable, incorporating games, songs, and visual aids that kept my child's attention and made learning exciting.❞</p>
+      </div>
+
+      <div class="card">
+        <div class="parent-details">
+          <div>
+            <img src="./Images/2.jpeg" alt="Parent image">
+          </div>
+          <div>Neha's Parent</div>
+        </div>
+        <p>❝ The language instructors at the school were not only highly skilled and knowledgeable but also incredibly patient and supportive. They created a warm and encouraging environment that fostered learning at every step. They tailored their teaching to suit different age groups, ensuring that both children and adults felt comfortable and motivated to learn.❞</p>
+      </div>
+
+      <div class="card">
+        <div class="parent-details">
+          <div>
+            <img src="./Images/3.jpeg" alt="Parent image">
+          </div>
+          <div>Gungun's Parent</div>
+        </div>
+        <p>❝ The curriculum was specifically designed to cater to the needs of young learners. It included age-appropriate vocabulary, basic phrases, and interactive activities that made language learning both accessible and enjoyable for my child. I noticed significant progress in my child's language skills within a short period.❞</p>
+      </div>
+
+      <div class="card">
+        <div class="parent-details">
+          <div>
+            <img src="./Images/4.jpg" alt="Parent image">
+          </div>
+          <div>Divyanshu's Parent</div>
+        </div>
+        <p>❝ The school recognized the importance of involving parents in the language learning process. They organized regular parent-child activities and encouraged us to practice the language together at home. This aspect not only strengthened the bond between my child and me but also provided continuous support and reinforcement for their language development.❞</p>
+      </div>
+
+      <div class="card">
+        <div class="parent-details">
+          <div>
+            <img src="./Images/5.jpeg" alt="Parent image">
+          </div>
+          <div>Karan's Parent</div>
+        </div>
+        <p>❝ Alongside language proficiency, the school emphasized cultural understanding. They incorporated cultural aspects into the lessons, teaching us about traditions, customs, and celebrations associated with the language. This broader perspective enriched our learning experience and provided a well-rounded education.❞</p>
+      </div>
+
+      <div class="card">
+        <div class="parent-details">
+          <div>
+            <img src="./Images/6.jpeg" alt="Parent image">
+          </div>
+          <div>Shivam's Parent</div>
+        </div>
+        <p>❝ The school had a well-structured system for tracking our progress and conducting regular assessments. This allowed me to monitor my child's language development and understand their strengths and areas for improvement. The constructive feedback provided by the instructors helped us to focus on specific aspects and make steady progress.❞</p>
+      </div>
+
+      <div class="card">
+        <div class="parent-details">
+          <div>
+            <img src="./Images/7.jpeg" alt="Parent image">
+          </div>
+          <div>Ishika's Parent</div>
+        </div>
+        <p>❝ The school maintained a safe and inclusive learning environment, where everyone felt respected and valued. They embraced diversity and encouraged open discussions about different cultures and perspectives. This environment fostered a sense of belonging and made the language learning experience even more enjoyable.❞</p>
+      </div>
+
+      <div class="card">
+        <div class="parent-details">
+          <div>
+            <img src="./Images/8.jpeg" alt="Parent image">
+          </div>
+          <div>Vedehi's Parent</div>
+        </div>
+        <p>❝ The language program emphasized real-life application, enabling us to use the language in practical situations. This approach boosted our confidence in speaking and listening, as we could immediately apply what we learned in everyday conversations. It was rewarding to see my child enthusiastically using the new language in their interactions with others.❞</p>
+      </div>
+
+      <div class="card">
+        <div class="parent-details">
+          <div>
+            <img src="./Images/9.jpeg" alt="Parent image">
+          </div>
+          <div>Bhumika's Parent</div>
+        </div>
+        <p>❝ The school fostered a strong sense of community among parents who were learning the language alongside their children. We had access to online forums, workshops, and events that allowed us to connect, share experiences, and support one another. Being part of this community enhanced our overall learning journey and made it a memorable experience.❞</p>
+      </div>
+
+      <div class="card">
+        <div class="parent-details">
+          <div>
+            <img src="./Images/10.jpeg" alt="Parent image">
+          </div>
+          <div>Arjun's Parent</div>
+        </div>
+        <p>❝ The language program instilled a lifelong learning perspective in both my child and me. By emphasizing the importance of continuous learning and exploration, it encouraged us to embrace new challenges and opportunities beyond language acquisition. This mindset has positively influenced not only our language skills but also our personal growth and development.❞</p>
+      </div>
+    </div>
   </section>
 
   <section class="featured-testimonial">
     <!-- Featured testimonial content goes here -->
   </section>
 
-  <section class="video-testimonials">
-    <iframe width="560" height="315" 
-        src="https://www.youtube.com/embed/qARXCXvQXKY" 
-        title="YouTube video player" 
-        frameborder="0" 
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-        allowfullscreen>
-    </iframe>
-  </section>
 
   <section class="case-studies">
     <!-- Case studies content goes here -->
@@ -42,9 +173,61 @@
   <section class="trust-elements">
     <!-- Trust elements content goes here -->
   </section>
+ <!-- footer-part1 -->
 
-  <footer>
-    <!-- Your footer content goes here -->
-  </footer>
+ <div class="footer">
+  <div>
+    <div>
+      <h1>Contact</h1>
+      <p>Never Want To Miss A Camp Spot Ever</p>
+      <div>
+        <p>Online Course Catalogue</p>
+        <p>Book a Camp</p>
+        <p>Camp locations</p>
+        <p>Summer camps</p>
+      </div>
+    </div>
+
+    <div id="line2"></div>
+
+    <div>
+      <div>
+        <p>Address :</p>
+        <p>123 Dream Avenre, New York</p>
+      </div>
+
+      <div>
+        <p>E-mail :</p>
+        <p>hello.edukin@gmail.com</p>
+      </div>
+
+      <div>
+        <p>Telephone :</p>
+        <p>(313) 235 634 846 534/p></p>
+      </div>
+
+      <div>
+        <p>Instagram :</p>
+        <p>@hello.edukin</p>
+      </div>
+
+      <div>
+        <p>Facebook :</p>
+        <p>Edukin.eng.com</p>
+      </div>
+    </div>
+  </div>
+
+  <div>
+    <p>@2021 Edukin. All rights reserved.</p>
+    <p>Terms of Use</p>
+    <p>Privacy Policy</p>
+    <p>Design By Orix Agency</p>
+  </div>
+</div>
+</div>
+
 </body>
+
+<script src="./testimonial.js"></script>
 </html>
