--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <a href="index.html">Home</a>
         <a href="#">Programs</a>
         <a href="./Amol/courses.html" id="course">Courses</a>
-        <a href="#">Admissions</a>
+        <a href="Jahir/register.html">Admissions</a>
         <a href="Ashish/testimonial.html">Testimonial</a>
       </div>
 
