--- a/Jahir/register.html
+++ b/Jahir/register.html
@@ -4,30 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+     <!-- body -->
+     <link rel="preconnect" href="https://fonts.googleapis.com" />
+     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin /><link
+       href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap"
+       rel="stylesheet"
+     />
+ 
+     <link rel="preconnect" href="https://fonts.googleapis.com" />
+     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin /><link
+       href="https://fonts.googleapis.com/css2?family=Bruno+Ace+SC&display=swap"
+       rel="stylesheet"
+     />
     <link rel="stylesheet" href="register.css">
 </head>
 <body>
-    <div id="cont1">
-        <div id="logo">
-            <h1>EDUKIN</h1>
+    <!-- nav bar  -->
+    <div class="nav">
+        <div>
+          <a href="../index.html"><h1>Edukin</h1></a>
         </div>
-        <div id="nav1">
-            <ul>
-                <li><a href="/index.html">Home</a></li>
-                <li><a href="#">Programs</a></li>
-                <li><a href="#">Courses</a></li>
-                <li><a href="#">Admissions</a></li>
-                <li><a href="#">Testimonial</a></li>
-            </ul>
+  
+        <div>
+          <a href="../index.html">Home</a>
+          <a href="#">Programs</a>
+          <a href="../Amol/courses.html" id="course">Courses</a>
+          <a href="#">Admissions</a>
+          <a href="../Ashish/testimonial.html">Testimonial</a>
         </div>
-        <div id="negivation">
-            <div id="menu" onclick="onClickMenu()">
-               <div id="bar1" class="bar"></div>
-               <div id="bar2" class="bar"></div>
-               <div id="bar3" class="bar"></div>
-            </div>
-        </div>
-   </div>
+  
+        <a href="login.html"><button id="register">Registration</button></a>
+      </div>
+  
+      <!-- nav bar  -->
     <div id="header"> 
         <h1> Online Admission Form </h1>
         <img src="https://web.schoollog.in/images/Shape9.svg" alt="">
