--- a/Ashish/testimonial.html
+++ b/Ashish/testimonial.html
@@ -2,6 +2,18 @@
 <html>
 <head>
   <title>Testimonial Page</title>
+    <!-- body -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin /><link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap"
+      rel="stylesheet"
+    />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin /><link
+      href="https://fonts.googleapis.com/css2?family=Bruno+Ace+SC&display=swap"
+      rel="stylesheet"
+    />
   <link rel="stylesheet" type="text/css" href="testimonial.css">
 </head>
 <body>
