--- a/Jahir/login.html
+++ b/Jahir/login.html
@@ -1,61 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
     <link rel="stylesheet" href="login.css">
+    <title>Document</title>
+    <a style="text-decoration: none; color: white; font-size: x-large;top: 10px ;left: 10px; position: absolute;"
+        href="../index.html"> <img style="width: 30px;height: 30px;" src="home.png" alt=""> Home</a>
 </head>
+
 <body>
-    <div id="cont1">
-        <div id="logo">
-            <h1>EDUKIN</h1>
+    <div id="login">
+        <h1>Sign in</h1>
+        <div>
+            New User?<a href="register.html" style="text-decoration: none; color: blue;"> Create an account</a>
         </div>
-        <div id="nav1">
-            <ul>
-                <li><a href="/index.html">Home</a></li>
-                <li><a href="#">Programs</a></li>
-                <li><a href="#">Courses</a></li>
-                <li><a href="#">Admissions</a></li>
-                <li><a href="#">Testimonial</a></li>
-            </ul>
-        </div>
-        <div id="negivation">
-            <div id="menu" onclick="onClickMenu()">
-               <div id="bar1" class="bar"></div>
-               <div id="bar2" class="bar"></div>
-               <div id="bar3" class="bar"></div>
+        <form>
+            <input type="email" id="email" name="email" placeholder="Enter your email" required>
+
+            <input type="password" id="password" placeholder="Enter your password" required>
+            <div class="captcha">
+                <label for="captcha-input"> Enter Captcha</label>
+                <div class="preview"></div>
+                <div class="captcha-form">
+                    <input type="text"  id="captcha-form" placeholder="Enter Captcha Here" required>
+                    <button class="captcha-refresh">Refresh</button>
+                </div>
             </div>
-        </div>
-   </div>
-    <div class="login-form">
-        <div id="circleDiv">
-             <div id="circle"></div>
-             <div>Loading....</div>
-        </div>
-        <div class="form-title">Student Login</div>
-        <div class="form-input">
-            <label for="username"> Email</label>
-            <input type="text" id="email" placeholder="Enter Email here" required>
-        </div>
-        <div class="form-input">
-            <label for="password"> Password</label>
-            <input type="password" id="password" placeholder="Enter Password here" required >
+            <input type="submit" value="Submit" id="btn">
+        </form>
+        <p>------------Or------------</p>
+        <div id="other">
+            <a href="">
+                <img src="google.png" alt="">
+                Continue with Google
+            </a>
+
+            <a href="">
+                <img src="facebook.png" alt="">
+                Continue with Facebook
+            </a>
         </div>
 
-        <div class="captcha">
-            <label for="captcha-input"> Enter Captcha</label>
-            <div class="preview"></div>
-            <div class="captcha-form">
-                <input type="text"  id="captcha-form" placeholder="Enter Captcha Here" required>
-                <button class="captcha-refresh">Refresh</button>
-            </div>
+        <div style="margin-top: 20px;">
+            <a style="text-decoration: none; color: red;" href="">Forgot password?</a>
         </div>
-       
-        <div class="form-input">
-            <button type="submit" id="login-btn">Login</button>
+        <div id="logo">
+            <img src="logo.jpeg" alt="">
         </div>
-        <p>Don't have an account? <a href="register.html" id="signupLink">Register</a></p>
     </div>
 </body>
 </html>
