--- a/Ashish/testimonial.html
+++ b/Ashish/testimonial.html
@@ -2,18 +2,6 @@
 <html>
 <head>
   <title>Testimonial Page</title>
-    <!-- body -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin /><link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap"
-      rel="stylesheet"
-    />
-
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin /><link
-      href="https://fonts.googleapis.com/css2?family=Bruno+Ace+SC&display=swap"
-      rel="stylesheet"
-    />
   <link rel="stylesheet" type="text/css" href="testimonial.css">
 </head>
 <body>
@@ -44,7 +32,7 @@
 <section>
   <div class="head">
     <h1>Our Students Parent's Testimonials</h1>
-    <p>the language learning program at our school has been nothing short of transformative. The engaging teaching methods, supportive instructors, and age-appropriate curriculum have made language learning a joyous and rewarding experience for your child</p>
+    <p>The language learning program at our school has been nothing short of transformative. The engaging teaching methods, supportive instructors, and age-appropriate curriculum have made language learning a joyous and rewarding experience for your child</p>
   </div>
 </section>
 
