Media Query Add

--- a/Jahir/register.html
+++ b/Jahir/register.html
@@ -17,6 +17,27 @@
        rel="stylesheet"
      />
     <link rel="stylesheet" href="./register.css">
+    <link rel="stylesheet" type="text/css" href="css/all.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css"> 
+    <style type="text/css">
+
+        #header h1{
+            width: 0ch;
+            overflow: hidden;
+            white-space: nowrap;
+            animation: text 6s steps(14) infinite alternate;
+            border-right: 3px solid black;
+            /* font-size: 60px; */
+        }
+        @keyframes text{
+            0%{
+                width: 0ch;
+            }
+            50%{
+                width: 14ch;
+            }
+        }
+    </style>
 </head>
 <body>
     <!-- nav bar  -->
@@ -39,7 +60,7 @@
       <!-- nav bar  -->
 
     <div id="header"> 
-        <h1> Online Admission Form </h1>
+        <h1>Admission Open. </h1>
         <img src="https://web.schoollog.in/images/Shape9.svg" alt="">
     </div>
     <div id="searchData"> 
@@ -147,6 +168,58 @@
             </div>
         </form>
      </div>
+      <!-- footer-part1 -->
+
+      <div class="footer">
+        <div>
+          <div>
+            <h1>Contact</h1>
+            <p>Never Want To Miss A Camp Spot Ever</p>
+            <div>
+              <p>Online Course Catalogue</p>
+              <p>Book a Camp</p>
+              <p>Camp locations</p>
+              <p>Summer camps</p>
+            </div>
+          </div>
+
+          <div id="line2"></div>
+
+          <div>
+            <div>
+              <p>Address :</p>
+              <p>123 Dream Avenre, New York</p>
+            </div>
+
+            <div>
+              <p>E-mail :</p>
+              <p>hello.edukin@gmail.com</p>
+            </div>
+
+            <div>
+              <p>Telephone :</p>
+              <p>(313) 235 634 846 534/p></p>
+            </div>
+
+            <div>
+              <p>Instagram :</p>
+              <p>@hello.edukin</p>
+            </div>
+
+            <div>
+              <p>Facebook :</p>
+              <p>Edukin.eng.com</p>
+            </div>
+          </div>
+        </div>
+
+        <div>
+          <p>@2021 Edukin. All rights reserved.</p>
+          <p>Terms of Use</p>
+          <p>Privacy Policy</p>
+          <p>Design By Orix Agency</p>
+        </div>
+      </div>
 </body>
 </html>
 <script src="./register.js"></script>
