--- a/Jahir/login.html
+++ b/Jahir/login.html
@@ -12,7 +12,7 @@
 
 <body>
     <div id="login">
-        <h1>Sign in</h1>
+        <h1>Student Login </h1>
         <div>
             New User?<a href="register.html" style="text-decoration: none; color: blue;"> Create an account</a>
         </div>
