--- a/Amol/courses.html
+++ b/Amol/courses.html
@@ -5,13 +5,48 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="./courses.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin /><link
+  href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap"
+  rel="stylesheet"
+/>
+
+<link rel="preconnect" href="https://fonts.googleapis.com" />
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin /><link
+  href="https://fonts.googleapis.com/css2?family=Bruno+Ace+SC&display=swap"
+  rel="stylesheet"
+/>
   <title>Document</title>
 </head>
 
 <body>
+
+  <div class="nav">
+    <div>
+      <a href="./index.html">
+        <h1>Edukin</h1>
+      </a>
+    </div>
+
+    <div>
+      <a href="../index.html">Home</a>
+      <a href="#">Programs</a>
+      <a href="../Amol/courses.html" id="course">Courses</a>
+      <a href="../Jahir/register.html">Admissions</a>
+      <a href="../Ashish/testimonial.html">Testimonial</a>
+    </div>
+
+    <a href="Jahir/login.html"><button id="register">Login</button></a>
+  </div>
+
+
   <div id="heading-div">
     <h1 id="heading">Explore our Exciting Courses for Young Minds</h1>
-    <p id="description">Unlock a world of knowledge and fun with our wide range of engaging courses designed specifically for children. Our carefully crafted courses blend education and entertainment to inspire young learners, fostering their curiosity and igniting a passion for lifelong learning. From science and art to coding and languages, our interactive courses provide a stimulating and supportive environment where children can explore, create, and thrive. Join us on an educational adventure where imagination knows no bounds!</p>
+    <p id="description">Unlock a world of knowledge and fun with our wide range of engaging courses designed
+      specifically for children. Our carefully crafted courses blend education and entertainment to inspire young
+      learners, fostering their curiosity and igniting a passion for lifelong learning. From science and art to coding
+      and languages, our interactive courses provide a stimulating and supportive environment where children can
+      explore, create, and thrive. Join us on an educational adventure where imagination knows no bounds!</p>
   </div>
   <div id="mainsection">
     <div id="card">
@@ -47,13 +82,66 @@
               <h3 id="discount">14% OFF</h3>
             </div>
           </div>
-          <button id="explorebtn">Explore</button>
+          <a  id="explorebtn" >Explore</a>
+         
         </div>
       </div>
-    </div>    
+    </div>
 
   </div>
+
+  <div class="footer">
+    <div>
+      <div>
+        <h1>Contact</h1>
+        <p>Never Want To Miss A Camp Spot Ever</p>
+        <div>
+          <p>Online Course Catalogue</p>
+          <p>Book a Camp</p>
+          <p>Camp locations</p>
+          <p>Summer camps</p>
+        </div>
+      </div>
+
+      <div id="line2"></div>
+
+      <div>
+        <div>
+          <p>Address :</p>
+          <p>123 Dream Avenre, New York</p>
+        </div>
+
+        <div>
+          <p>E-mail :</p>
+          <p>hello.edukin@gmail.com</p>
+        </div>
+
+        <div>
+          <p>Telephone :</p>
+          <p>(313) 235 634 846 534/p></p>
+        </div>
+
+        <div>
+          <p>Instagram :</p>
+          <p>@hello.edukin</p>
+        </div>
+
+        <div>
+          <p>Facebook :</p>
+          <p>Edukin.eng.com</p>
+        </div>
+      </div>
+    </div>
+
+    <div>
+      <p>@2021 Edukin. All rights reserved.</p>
+      <p>Terms of Use</p>
+      <p>Privacy Policy</p>
+      <p>Design By Orix Agency</p>
+    </div>
   </div>
+  
+ 
 </body>
 
 </html>
