After Login part and Deletion Part Added only for User home.html file

--- a/Pavan/userhome.html
+++ b/Pavan/userhome.html
@@ -328,8 +328,10 @@
       console.log(id)
       console.log(name[0])
       register.innerText = name[0];
+      logout.style.display="block";
     }else{
       register.innerText="Register";
+      logout.style.display="none";
     }
   }
 
