--- a/Amol/courses.html
+++ b/Amol/courses.html
@@ -35,8 +35,8 @@
       <a href="../Jahir/register.html">Admissions</a>
       <a href="../Ashish/testimonial.html">Testimonial</a>
     </div>
-
-    <a href="Jahir/login.html"><button id="register">Login</button></a>
+     <button id="logout" >Log out</button>     
+    <a href="../Jahir/login.html"><button id="register">Login</button></a>
   </div>
 
 
