--- a/Pavan/userhome.html
+++ b/Pavan/userhome.html
@@ -32,7 +32,7 @@
       <div>
         <a href="userhome.html">Home</a>
         <a href="#">Programs</a>
-        <a href="courses.html">Courses</a>
+        <a href="../Amol/courses.html">Courses</a>
         <a href="#">Admissions</a>
         <a href="#">Testimonial</a>
       </div>
