email check added

--- a/Jahir/register.html
+++ b/Jahir/register.html
@@ -17,9 +17,9 @@
        rel="stylesheet"
      />
     <link rel="stylesheet" href="./register.css">
-    <link rel="stylesheet" type="text/css" href="css/all.css">
-    <link rel="stylesheet" type="text/css" href="css/style.css"> 
-    <style type="text/css">
+    <!-- <link rel="stylesheet" type="text/css" href="css/all.css"> -->
+    <!-- <link rel="stylesheet" type="text/css" href="css/style.css">  -->
+    <style>
 
         #header h1{
             width: 0ch;
