--- a/Jahir/register.html
+++ b/Jahir/register.html
@@ -53,7 +53,7 @@
           <a href="#">Admissions</a>
           <a href="../Ashish/testimonial.html">Testimonial</a>
         </div>
-  
+        <button id="logout" >Log out</button>
         <a href="login.html"><button id="register">Registration</button></a>
       </div>
   
