--- a/Pavan/userhome.html
+++ b/Pavan/userhome.html
@@ -31,10 +31,10 @@
 
       <div>
         <a href="userhome.html">Home</a>
-        <a href="#">Programs</a>
+        <a href="../Ashish/programe.html">Programs</a>
         <a href="../Amol/courses.html">Courses</a>
-        <a href="#">Admissions</a>
-        <a href="#">Testimonial</a>
+        <a href="../Jahir/register.html">Admissions</a>
+        <a href="../Ashish/testimonial.html">Testimonial</a>
       </div>
       <a href="../index.html" id="logout">Log out</a>
       <a href="user.html"><button id="register"></button></a>
