--- a/Ashish/programe.html
+++ b/Ashish/programe.html
@@ -13,9 +13,9 @@
         </div>
   
         <div>
-          <a href="index.html">Home</a>
+          <a href="../index.html">Home</a>
           <a href="./programe.html">Programs</a>
-          <a href="./Amol/courses.html" id="course">Courses</a>
+          <a href="../Amol/courses.html" id="course">Courses</a>
           <a href="#">Admissions</a>
           <a href="./testimonial.html">Testimonial</a>
         </div>
