--- a/Ashish/programe.html
+++ b/Ashish/programe.html
@@ -16,7 +16,7 @@
           <a href="../index.html">Home</a>
           <a href="./programe.html">Programs</a>
           <a href="../Amol/courses.html" id="course">Courses</a>
-          <a href="#">Admissions</a>
+          <a href="../Jahir/register.html">Admissions</a>
           <a href="./testimonial.html">Testimonial</a>
         </div>
   
